# Skript

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  LICENSE  Nexus - Skript - Skript.csv  README.md  Readme.md  Skript - Sommerstück 2024.csv  Skript - Winterstück 2024.csv  app.py  charaktere.csv  convert.html  generate_voice.py  index.html  manifest.json  out.html  package.json  plays.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  script.js  stats.html  styles.css  suggestor.html  sw.js  viewer.html  viewer2.html  vitest.config.ts
__tests__/: setup.ts
__tests__/lib/: utils.test.ts
__tests__/stores/: script-store.test.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app/actor/: page.tsx
app/stage/: page.tsx
components/branding/: Footer.tsx  LMFLogo.tsx  ThemeProvider.tsx  index.ts
components/layout/: BottomNav.tsx  NavBar.tsx  SettingsModal.tsx  Sidebar.tsx  index.ts
components/script/: DirectorModal.tsx  SceneHeader.tsx  SceneOverview.tsx  ScriptLine.tsx  ScriptViewer.tsx  (+1 more)
e2e/: home.spec.ts
js/: config.js  data-manager.js  main.js  navigation.js  renderer.js  state.js  suggestor.js  ui-controls.js  viewer-actor.js  viewer-shared.js  viewer-stage.js
lib/: api.ts  index.ts  socket.ts  utils.ts
public/: manifest.json
stores/: director-store.ts  index.ts  script-store.ts  settings-store.ts
styles/: base.css  components.css  script.css  suggestor.css  themes.css  viewer-actor.css  viewer.css
templates/: convert.html  index.html  stats.html  suggestor.html  viewer.html  viewer2.html
types/: index.ts
(+41 files in other folders)
