[project]
name = "skript"
version = "0.1.0"
description = "Interaktives Drehbuch-System für Proben und Aufführungen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "eventlet==0.40.3",
    "flask-socketio==5.5.1",
    "flask==3.1.2",
    "gevent-websocket==0.10.1",
    "pandas>=2.3.3",
    "python-dotenv==1.2.1",
    "requests>=2.32.5",
]

